# iR_pers_task_02

./: .gitignore  CMakeLists.txt  main.cpp
